--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="onStart">onStart() Aufrufe: 0</string>
     <string name="onResume">onResume() Aufrufe: 0</string>
     <string name="onRestart">onRestart() Aufrufe: 0</string>
-    <string name="button">ActivityTwo starten</string>
-    <string name="title_activity_activity_two">ActivityTwo</string>
+    <string name="button">ActTwo starten</string>
+    <string name="title_activity_activity_two">ActTwo</string>
     <string name="close">Activity schliessen</string>
 
 </resources>
